--- a/compiler/rt/pom.xml
+++ b/compiler/rt/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.mobidevelop.robovm</groupId>
     <artifactId>robovm-compiler-parent</artifactId>
-    <version>2.3.3-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
 
   <artifactId>robovm-rt</artifactId>
