--- a/plugins/eclipse/pom.xml
+++ b/plugins/eclipse/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>com.mobidevelop.robovm</groupId>
   <artifactId>org.robovm.eclipse.parent</artifactId>
-  <version>2.3.3-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>RoboVM for Eclipse</name>
   <packaging>pom</packaging>
 
