--- a/plugins/eclipse/ui/pom.xml
+++ b/plugins/eclipse/ui/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.mobidevelop.robovm</groupId>
     <artifactId>org.robovm.eclipse.parent</artifactId>
-    <version>2.3.3-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>org.robovm.eclipse.ui</artifactId>
