--- a/plugins/gradle/build.gradle
+++ b/plugins/gradle/build.gradle
@@ -18,13 +18,13 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'com.mobidevelop.robovm'
 archivesBaseName = 'robovm-gradle-plugin'
-version = '2.3.3-SNAPSHOT'
+version = '3.0.0'
 
 sourceCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 ext {
-                                    roboVMVersion = '2.3.3-SNAPSHOT'
+    roboVMVersion = '3.0.0'
 }
 
 repositories {
