--- a/plugins/maven/plugin/pom.xml
+++ b/plugins/maven/plugin/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.mobidevelop.robovm</groupId>
     <artifactId>robovm-maven-parent</artifactId>
-    <version>2.3.3-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>robovm-maven-plugin</artifactId>
